<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/usernameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@id/clock"
        android:autofillHints="@string/username"
        android:inputType="text" />

    <ImageView
        android:id="@+id/clock"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginBottom="140dp"
        android:contentDescription="@string/clock_image"
        android:src="@drawable/clock"
        app:layout_constraintBottom_toTopOf="@+id/usernameButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="100dp"
        android:clickable="true"
        android:src="@drawable/ic_arrow_forward_black_24dp"
        android:text="@string/right_arrow"
        app:fabSize="normal"
        app:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameButton"
        android:contentDescription="@string/login"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>