<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/fragment_details"
    tools:context=".DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/dateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@id/timePicker"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dateText"
        app:layout_constraintTop_toTopOf="@+id/dateText"/>

    <TextView
        android:id="@+id/dateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/timePicker"
        app:layout_constraintEnd_toStartOf="@id/dateButton"
         />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton"
        app:layout_constraintBottom_toTopOf="@+id/reminderName"
        />

    <EditText
        android:id="@+id/reminderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/reminder_name"
        app:layout_constraintTop_toBottomOf="@id/timePicker"
        android:autofillHints="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:autofillHints="@string/description"
        android:hint="@string/description"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/reminderName"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>